# doc_manager

./: .env  __init__.py  main.py  pyproject.toml
chroma_db/: chroma.sqlite3
doc_manager/: __init__.py
doc_manager/api/: __init__.py  routes.py
doc_manager/config/: settings.py
doc_manager/services/: document_service.py
