[tool.poetry]
name = "doc-manager"
version = "0.1.0"
description = "Document management system with ChromaDB"
authors = ["ashrujitpal <ashrujitpal1@gmail.com>"]
readme = "README.md"
packages = [{include = "doc_manager"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.8"
chromadb = "^0.5.20"
python-dotenv = "^1.0.1"
flask = "^3.1.0"
python-magic = "^0.4.27"
langchain-community = "^0.3.8"
unstructured = "^0.11.0"
pydantic-settings = "^2.6.1"
sentence-transformers = "^3.3.1"
pdf2image = "^1.17.0"
pdfminer-six = "^20240706"
pypdf = "^5.1.0"
pytesseract = "^0.3.13"
nltk = "^3.9.1"
pillow = "^11.0.0"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
